fix(reveal.js): verouille la version de reveal a 3.9.2

--- a/config.json
+++ b/config.json
@@ -4,13 +4,13 @@
     "sourceDir": "./src",
     "destinationDir": "./output",
     "server_port": 8080,
-    "pandocParam": "-t revealjs -s -V revealjs-url=https://revealjs.com -V transition=cube"
+    "pandocParam": "-t revealjs -s -V revealjs-url=https://unpkg.com/reveal.js@3.9.2 -V transition=cube"
   },
   "production": {
     "config_id": "production",
     "sourceDir": "./src",
     "destinationDir": "./docs",
     "server_port": 8080,
-    "pandocParam": "-t revealjs -s -V revealjs-url=https://revealjs.com -V transition=cube"
+    "pandocParam": "-t revealjs -s -V revealjs-url=https://unpkg.com/reveal.js@3.9.2 -V transition=cube"
   }
 }
